# AIEngine

./: .gitignore  CMakeLists.txt  CNAME  LICENSE  README.md  codeql-analysis.yml
.github/workflows/: cmake.yml  codeql-analysis.yml
AdversarialSearch/Minimax/: BitMath.h  CMakeLists.txt  Main.cpp  Makefile  MinimaxBenchmarker.cpp  MinimaxBenchmarker.h  MinimaxTester.cpp  MinimaxTester.h  TicTacToeMinimax.cpp  TicTacToeMinimax.h  vsvarsall.bat
AdversarialSearch/Minimax/Tests/: CMakeLists.txt  MinimaxTestMain.cpp  MinimaxTester.cpp  MinimaxTester.h
Common/: Matrix.h  Random.cpp  Random.h
Examples/MathLibrary/: ApiExports.h  CMakeLists.txt  MathLibrary.cpp  MathLibrary.h
Examples/MathLibrary/Tests/: CMakeLists.txt  MathLibraryTestMain.cpp
Export/: CMakeLists.txt  Exporter.cpp  MathLibrary.cpp  MathLibrary.h
FSM/: CMakeLists.txt  FSM.cpp  Idle.h  MoveTo.h  State.h  StateMachine.h
Genetic/: GeneticAlgorithm.cpp  GeneticAlgorithm.h
MinimaxProj/: Main.cpp  MinimaxBenchmarker.cpp  MinimaxBenchmarker.h  TicTacToeMinimax.cpp  TicTacToeMinimax.h
Miscellaneous/: BitMath.cpp  BitMath.h  ISerializable.cpp  ISerializable.h  Matrix.cpp  Matrix.h  MatrixTests.cpp  Random.cpp  Random.h
Miscellaneous/Tests/: CMakeLists.txt  MatrixTestMain.cpp
NeuralNetwork/: ActivationFunctions.cpp  ActivationFunctions.h  CMakeLists.txt  Neuron.cpp  Neuron.h
NeuralNetwork/Common/: ActivationFunctions.cpp  ActivationFunctions.h  CMakeLists.txt  Matrix.cpp  Matrix.h  MatrixTests.cpp  Neuron.cpp  Neuron.h  Random.cpp  Random.h
NeuralNetwork/MLP/: CMakeLists.txt  Layer.cpp  Layer.h  MLP.cpp  MLP.h  MLPMain.cpp  Main.cpp
NeuralNetwork/MLP/Tests/: CMakeLists.txt  MLPMain.cpp  MLPTestMain.cpp
NeuralNetwork/MLP/data/: MLP weights (7;10;10) digital clock number recognition (0 to 9).txt  weights.txt  xor_backpropagation_2_2_1.txt  xor_backpropagation_2_2_2.txt  xor_backpropagation_2_3_1.txt  xor_backpropagation_2_3_3_3_1.txt  xor_weights_3_layers.txt
NeuralNetwork/NeuralNetwork/: Matrix.cpp  Matrix.h  MatrixTests.cpp  Neuron.cpp  Neuron.h  Perceptron.cpp  Perceptron.h  PerceptronTests.cpp
NeuralNetwork/Perceptron/: CMakeLists.txt  Neuron.cpp  Neuron.h  Perceptron.cpp  Perceptron.h  PerceptronMain.cpp  PerceptronTests.cpp
NeuralNetwork/Perceptron/Tests/: CMakeLists.txt  PerceptronMain.cpp  PerceptronTestMain.cpp
NeuralNetwork/Perceptron/data/: weights_perceptron_x_greater_than_y.txt  weights_perceptron_y_greater_than_x.txt
Search Heuristic/Genetic Algorithm/: CMakeLists.txt  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Main.cpp
Strategy/: Main.cpp
