cmake_minimum_required(VERSION 3.14.5)
project(AIEngine)
set(CMAKE_CXX_STANDARD 14)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/build)
add_subdirectory(AdversarialSearch/Minimax)
add_subdirectory(Common)
add_subdirectory(NeuralNetwork/Perceptron)
add_subdirectory(NeuralNetwork/MLP)
add_subdirectory("Search Heuristic/Genetic Algorithm")
